// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSelectableSearch is rendered 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayout--fullWidth"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <div
      class="euiFormControlLayoutIcons euiFormControlLayoutIcons--left euiFormControlLayoutIcons--absolute"
    >
      <span
        class="euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="search"
        />
      </span>
    </div>
    <input
      aria-haspopup="listbox"
      aria-label="aria-label"
      autocomplete="off"
      class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch testClass1 testClass2 emotion-euiTestCss"
      data-test-subj="test subject string"
      type="search"
      value=""
    />
  </div>
</div>
`;

exports[`EuiSelectableSearch renders aria props if a listId is present 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayout--fullWidth"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <div
      class="euiFormControlLayoutIcons euiFormControlLayoutIcons--left euiFormControlLayoutIcons--absolute"
    >
      <span
        class="euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="search"
        />
      </span>
    </div>
    <input
      aria-autocomplete="list"
      aria-controls="list"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="aria-label"
      aria-owns="list"
      autocomplete="off"
      class="euiFieldSearch euiFieldSearch--fullWidth euiSelectableSearch testClass1 testClass2 emotion-euiTestCss"
      data-test-subj="test subject string"
      role="combobox"
      type="search"
      value=""
    />
  </div>
</div>
`;

exports[`EuiSelectableSearch renders placeholder, value, name, and other remaining EuiFieldSearch props 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayout--fullWidth"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <div
      class="euiFormControlLayoutIcons euiFormControlLayoutIcons--left euiFormControlLayoutIcons--absolute"
    >
      <span
        class="euiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="euiFormControlLayoutCustomIcon__icon"
          data-euiicon-type="search"
        />
      </span>
    </div>
    <input
      aria-haspopup="listbox"
      aria-label="aria-label"
      autocomplete="off"
      class="euiFieldSearch euiFormControlLayout--1icons euiFieldSearch--fullWidth euiFieldSearch-isClearable euiSelectableSearch testClass emotion-euiTestCss"
      data-test-subj="test subject string"
      id="testId"
      name="testName"
      placeholder="start typing"
      type="search"
      value="typed"
    />
    <div
      class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right euiFormControlLayoutIcons--absolute"
    >
      <button
        aria-label="Clear input"
        class="euiFormControlLayoutClearButton"
        data-test-subj="clearSearchButton"
        type="button"
      >
        <span
          class="euiFormControlLayoutClearButton__icon"
          data-euiicon-type="cross"
        />
      </button>
    </div>
  </div>
</div>
`;
